test/fails/bad_generics/bounds2.lgl
t vec_id<t : vec>(t x) {
    return x;
}

void main() {
    int fail = vec_id<int>(1);
}